--- a/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
+++ b/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
@@ -205,6 +205,7 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <Content Include="Scripts\store-public.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
