--- a/ShoeHouse/ShoeHouse.Data/ShoeHouse.Data.csproj
+++ b/ShoeHouse/ShoeHouse.Data/ShoeHouse.Data.csproj
@@ -54,10 +54,12 @@
     <Compile Include="Article.cs">
       <DependentUpon>WarehouseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ArticleMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store.cs">
       <DependentUpon>WarehouseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="StoreMetadata.cs" />
     <Compile Include="WarehouseModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
