--- a/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
+++ b/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
@@ -209,6 +209,11 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\store-public.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
