--- a/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
+++ b/ShoeHouse/ShoeHouse.Web/ShoeHouse.Web.csproj
@@ -180,8 +180,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Content\animate.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\icomoon.css" />
+    <Content Include="Content\images\loader.gif" />
+    <Content Include="Content\images\site-back.jpg" />
+    <Content Include="Content\images\stores-2.jpg" />
+    <Content Include="Content\images\stores.jpg" />
     <Content Include="Content\normalize.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\icomoon\icomoon.svg" />
     <Content Include="Global.asax" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
@@ -202,6 +211,13 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\icomoon\icomoon.eot" />
+    <Content Include="fonts\icomoon\icomoon.ttf" />
+    <Content Include="fonts\icomoon\icomoon.woff" />
     <None Include="Properties\PublishProfiles\shoehouse17 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\shoehouse17 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
@@ -214,6 +230,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\libraries\bootstrap.min.js" />
+    <Content Include="Scripts\libraries\jquery.easing.1.3.js" />
+    <Content Include="Scripts\libraries\jquery.waypoints.min.js" />
     <Content Include="Scripts\store-public.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -241,6 +260,7 @@
     <Content Include="Views\StoresAdmin\Details.cshtml" />
     <Content Include="Views\StoresAdmin\Edit.cshtml" />
     <Content Include="Views\StoresAdmin\Index.cshtml" />
+    <Content Include="Scripts\libraries\theme.actions.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ShoeHouse.Core\ShoeHouse.Core.csproj">
