--- a/ShoeHouse/ShoeHouse.Web/Web.config
+++ b/ShoeHouse/ShoeHouse.Web/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!-- Azure connection string -->
     <add name="ShoesDbEntities" connectionString="metadata=res://*/WarehouseModel.csdl|res://*/WarehouseModel.ssdl|res://*/WarehouseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=flopez0420.database.windows.net;initial catalog=ShoeWarehouse;persist security info=True;user id=basemanager;password=24Horas@.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!-- LocalDB connection string -->
+    <!--<add name="ShoesDbEntities" connectionString="metadata=res://*/WarehouseModel.csdl|res://*/WarehouseModel.ssdl|res://*/WarehouseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ShoeWarehouseLocal.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
